--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="alternar-contas">
-                <p>Nao eh BiancaBringel?</p>  
+                <p>Não é BiancaBringel?</p>  
                 <p> <a href="#">Alternar contas</a> ou <a href="#">Inscreva-se</a></p>    
             </div>
 
